--- a/editor.html
+++ b/editor.html
@@ -122,9 +122,9 @@
             <button onclick="addField('text')">+ Text</button>
             <button onclick="addField('counter')">+ Counter</button>
             <button onclick="addField('timer')">+ Timer</button>
-            <button onclick="saveConfig()">💾 Save Config</button>
+            <button onclick="saveConfig()">Save Config</button>
             <input type="file" id="loadConfig" onchange="loadConfig(event)" hidden>
-            <button onclick="document.getElementById('loadConfig').click()">📂 Load Config</button>
+            <button onclick="document.getElementById('loadConfig').click()">Load Config</button>
         </div>
 
         <div id="sections"></div>
