--- a/editor.html
+++ b/editor.html
@@ -139,7 +139,7 @@
                 <div class="section" data-id="${sectionId}">
                     <div class="section-header">
                         <input class="section-title" value="New Section" placeholder="Section title">
-                        <button class="danger" onclick="this.closest('.section').remove()">🗑 Delete</button>
+                        <button class="danger" onclick="this.closest('.section').remove()">Delete</button>
                     </div>
                     <div class="section-fields"></div>
                     <button onclick="addFieldToSection('${sectionId}')" style="margin-top: 1rem">+ Add Field</button>
